--- a/style.css
+++ b/style.css
@@ -129,7 +129,7 @@ main{
 .fright {float:right;}
 
 @media only screen and (min-width: 900px) and (max-width:1200px) {
-	#menu{
+	.navbar{
 		display: none;
 		visibility: hidden;
 	}		
@@ -137,7 +137,7 @@ main{
 
 	@media only screen and (max-width: 800px) {
 		
-		#menu{
+		.navbar{
 			display: none;
 			visibility: hidden;
 		}
